--- a/kubernetes/rosetta-3-iiif/config/application.yml
+++ b/kubernetes/rosetta-3-iiif/config/application.yml
@@ -51,5 +51,6 @@ rosetta:
       external_media_base_url: https://rosetta-staging.k-int.com/image/iiif/3/
       iiif_media_base_url: https://rosetta-staging.k-int.com/image/iiif/3/
       mediaArtifact: mid
-      key_type: IDENTIFIER
-      identifier_type: iaid
+      manifest_key:
+        key_type: IDENTIFIER
+        identifier_type: iaid
