--- a/kubernetes/rosetta-3-iiif/kustomization.yml
+++ b/kubernetes/rosetta-3-iiif/kustomization.yml
@@ -9,3 +9,4 @@ configMapGenerator:
       - ./config/iiif-mapping.json
       - ./config/component_search.json
       - ./config/iiif_include.json
+      - ./config/request-transform.spec
