added data transform

--- a/kubernetes/rosetta-3-iiif/config/application.yml
+++ b/kubernetes/rosetta-3-iiif/config/application.yml
@@ -31,7 +31,7 @@ rosetta:
                 names:
                   - iiif-request-transform
           data:
-            glyphs:
+            - glyphs:
               policy: list
               names:
                 - iiif-mapping
