added data transform

--- a/kubernetes/cantaloupe/properties/cantaloupe.properties
+++ b/kubernetes/cantaloupe/properties/cantaloupe.properties
@@ -17,7 +17,7 @@ default.level=level0
 image.access.level.map=3;level2,2;level1
 oauth2.userinfo.endpoint=http://oauth2-proxy:4180/oauth2/userinfo
 elasticsearch.access.level.path=@admin.access.level.value
-elasticsearch.search.path=@admin.uid
+elasticsearch.search.path=@admin.id
 elasticsearch.url=
 restrict.images=false
 elasticsearch.extra.info.path=legal.rights
