--- a/kubernetes/rosetta-3-iiif/config/iiif-mapping.json
+++ b/kubernetes/rosetta-3-iiif/config/iiif-mapping.json
@@ -1,59 +1,26 @@
 {
-  "#type": "scope",
-  "scope": "$.source",
-  "value": {
-    "id": "$.@admin.id",
-    "type": "manifest",
-    "label": "$.summary.title",
-    "summary": "$.description[0].value",
-    "items": {
-      "#type": "as_list",
-      "values": {
-        "#type": "for_each",
-        "values": {
-          "#type": "flatten",
-          "values": [
-            {
-              "#type": "for_each",
-              "values": "$.multimedia[*].@admin.uuid",
-              "spec": {
-                "#type": "scope",
-                "scope": {
-                  "#type": "es_query",
-                  "query": "group.@admin.uuid:{$}"
-                },
-                "value": "$.hits.hits[*]._source"
-              }
-            }
-          ]
-        },
-        "spec": {
-          "#type": "require_catch",
-          "value": {
-            "type": "canvas",
-            "artifact": {
-              "name": "zoom",
-              "location": "[R]$.@processed.original.location",
-              "height": "[R]$.@processed.original.measurements.dimensions[?(@.dimension == 'height')].value",
-              "width": "[R]$.@processed.original.measurements.dimensions[?(@.dimension == 'width')].value",
-              "info_path": {
-                "#type": "literal",
-                "value": "/{location}"
-              }
-            },
-            "thumbnail": {
-              "#type": "require_catch",
-              "value": {
-                "#type": "scope",
-                "scope": "[R]$.processed",
-                "value": {
-                  "#type": "thumbnail"
-                }
-              }
-            }
-          }
-        }
+  "type": "manifest",
+  "id": "object-123",
+  "label": "Impression, Sunrise",
+  "metadata": {
+    "Creator": "Claude Monet",
+    "Genre": "Marine Art",
+    "Depicts": [
+      "Sunrise",
+      "Port of Le Havre",
+      "Barque"
+    ],
+    "Title": {
+      "en": "Impression, Sunrise",
+      "fr": "Impression, soleil levant"
+    }
+  },
+  "items": [
+    {
+      "type": "canvas",
+      "artifact": {
+        "location": "wikipedia/commons/thumb/5/59/Monet_-_Impression,_Sunrise.jpg/960px-Monet_-_Impression,_Sunrise.jpg"
       }
     }
-  }
+  ]
 }
