--- a/kubernetes/rosetta-3-iiif/config/iiif-mapping.json
+++ b/kubernetes/rosetta-3-iiif/config/iiif-mapping.json
@@ -5,6 +5,14 @@
     "id": "$.@admin.id",
     "type": "manifest",
     "label": "$.summary.title",
-    "summary": "$.description[0].value"
+    "summary": "$.description[0].value",
+    "items": [
+      {
+        "type": "canvas",
+        "artifact": {
+          "location": "wikipedia/commons/thumb/5/59/Monet_-_Impression,_Sunrise.jpg/960px-Monet_-_Impression,_Sunrise.jpg"
+        }
+      }
+    ]
   }
 }
