--- a/kubernetes/rosetta-3-iiif/config/iiif-mapping.json
+++ b/kubernetes/rosetta-3-iiif/config/iiif-mapping.json
@@ -1,7 +1,7 @@
 {
   "id": "$.@admin.id",
   "type": "manifest",
-  "label": "$.title",
+  "label": "$.summary.title",
   "summary": "$.description[0].value",
   "items": {
     "#type": "as_list",
