--- a/kubernetes/rosetta-3/config/application.yml
+++ b/kubernetes/rosetta-3/config/application.yml
@@ -192,6 +192,7 @@ rosetta:
               catalogueSource: "source.value"
               heldBy: "repository.name.value.keyword"
               webReference: "web.identifier.value.lower"
+              subjects: "subjects.subject.summary.title.keyword"
 
       - name: ciim/search/request
         type: proteus
