ES memory usage

--- a/kubernetes/internal-es/internal-es.yml
+++ b/kubernetes/internal-es/internal-es.yml
@@ -36,10 +36,10 @@ spec:
             - name: elasticsearch
               env:
                 - name: ES_JAVA_OPTS
-                  value: "-Xms4g -Xmx4g -Dlog4j2.formatMsgNoLookups=true"
+                  value: "-XX:MaxRAMPercentage=50.0 -Dlog4j2.formatMsgNoLookups=true"
               resources:
                 requests:
-                  memory: 6Gi
+                  memory: 12Gi
                   cpu: 1
               volumeMounts:
                 - name: dictionaries-etna
