--- a/kubernetes/rosetta-3-TEST/kustomization.yml
+++ b/kubernetes/rosetta-3-TEST/kustomization.yml
@@ -16,3 +16,4 @@ configMapGenerator:
       - ./config/inject_date_hist.json
       - ./config/es_query.json
       - ./config/component_search.json
+      - ./config/elastic_highlighting.json
