ElasticSearch: Highlighting -> Descriptions on search results

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -143,9 +143,13 @@ rosetta:
         type: merge
         phase: request
         properties:
-          path: root
+          path: body
           value:
             highlight:
+              pre_tags: [ "<mark>" ]
+              post_tags: [ "</mark" ]
+              fragment_size: 250
+              number_of_fragments: 1
               fields:
                 name.value: { }
                 identifier.__reference_number: { }
