ElasticSearch: Highlighting -> Descriptions on search results

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -65,6 +65,7 @@ rosetta:
             names:
               - to-generic-search
               - ciim/search/request
+              - inject-highlighting
 
       - name: ciim/searchTest
         paths:
