ElasticSearch: Highlighting -> Descriptions on search results

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -140,7 +140,7 @@ rosetta:
           spec: ${base_paths.proteus}/generic_search_modifications.json
 
       - name: inject-highlighting
-        type: merge
+        type: proteus
         properties:
           spec: ${base_paths.proteus}/inject_highlighting.json
 
