--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -45,8 +45,8 @@ rosetta:
               - generic-search-modifications
               - generic-to-elastic
               - elastic-modifications
-              - inject-highlighting
               - ciim/search/request
+              - inject-highlighting
           response:
             policy: list
             names:
@@ -139,6 +139,12 @@ rosetta:
           mutable: true
           spec: ${base_paths.proteus}/generic_search_modifications.json
 
+      - name: inject-highlighting
+        type: proteus
+        properties:
+          mutable: true
+          spec: ${base_paths.proteus}/inject_highlighting.json
+
       - name: generic-to-elastic
         type: elastic-generic-search
         properties:
@@ -217,11 +223,6 @@ rosetta:
                 boost: 2
               - field: "originals.description.value"
                 boost: 2
-
-      - name: inject-highlighting
-        type: proteus
-        properties:
-          spec: ${base_paths.proteus}/inject_highlighting.json
 
       - name: ciim/search/request
         type: proteus
