--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -283,5 +283,21 @@ rosetta:
           username: elastic
           password: Sti565pqjc99I9Cfy4W824Ig
 
+      - name: elasticsearch
+        type: proteus-simple
+        properties:
+          mutable: true
+          spec: ${base_paths.proteus}/provider.json
+          config:
+            properties:
+              elasticsearch:
+                url: http://afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com/public
+                auth_token: ZWxhc3RpYzpTdGk1NjVwcWpjOTlJOUNmeTRXODI0SWc=
+
+          repositories:
+            policy: list
+            names:
+              - elasticsearch_types
+
   monitoring:
     log_stages: true
