--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -301,6 +301,7 @@ rosetta:
         properties:
           host: ciim-public-etna-es-http.etna
           port: 9200
+          path_prefix: /public
           index: ciim
           username: elastic
           password: Sti565pqjc99I9Cfy4W824Ig
