--- a/kubernetes/rosetta-3-TEST/kustomization.yml
+++ b/kubernetes/rosetta-3-TEST/kustomization.yml
@@ -17,3 +17,4 @@ configMapGenerator:
       - ./config/inject_highlighting.json
       - ./config/es_query.json
       - ./config/component_search.json
+      - ./config/provider.json
