--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -293,22 +293,17 @@ rosetta:
           spec: ${base_paths.proteus}/aggs_count_to_doc_count.json
 
   provider:
+    global_timeout: 900s
+    timeout: 900s
     providers:
-      - name: elasticsearch
-        type: proteus-simple
+      - name: elasticsearchEtna
+        type: elasticsearch
         properties:
-          mutable: true
-          spec: ${base_paths.proteus}/provider.json
-          config:
-            properties:
-              elasticsearch:
-                url: http://afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com/public
-                auth_token: ZWxhc3RpYzpTdGk1NjVwcWpjOTlJOUNmeTRXODI0SWc=
-
-          repositories:
-            policy: list
-            names:
-              - elasticsearch_types
+          host: ciim-public-etna-es-http.etna
+          port: 9200
+          index: ciim
+          username: elastic
+          password: Sti565pqjc99I9Cfy4W824Ig
 
   monitoring:
     log_stages: true
