--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -299,6 +299,8 @@ rosetta:
       - name: elasticsearchEtna
         type: elasticsearch
         properties:
+          mutable: true
+          spec: ${base_paths.proteus}/provider.json
           host: ciim-public-etna-es-http.etna
           port: 9200
           index: ciim
