ElasticSearch: Highlighting -> Provider Added

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -239,6 +239,8 @@ rosetta:
                 boost: 3
               - field: "description.value"
                 boost: 2
+              - field: "summary.title"
+                boost: 2
               - field: "origination.description.value"
                 boost: 2
               - field: "custodial.description.value"
