ElasticSearch: Highlighting -> Provider Added

--- a/kubernetes/rosetta-3-TEST/kustomization.yml
+++ b/kubernetes/rosetta-3-TEST/kustomization.yml
@@ -18,3 +18,4 @@ configMapGenerator:
       - ./config/es_query.json
       - ./config/component_search.json
       - ./config/provider.json
+      - ./config/merge_advance_parameters.json
