ElasticSearch: Highlighting -> Provider Added

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -246,6 +246,8 @@ rosetta:
                 boost: 3
               - field: "origination.creator.name.value"
                 boost: 3
+              - field: "description.raw"
+                boost: 2
               - field: "description.value"
                 boost: 2
               - field: "summary.title"
