--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -111,21 +111,22 @@ rosetta:
         paths:
           - /rosetta/data/longSubjects
         profile: elasticsearch
-        type: advance-cache-multi
+        type: advanced-cache-multi
         transforms:
           request:
             policy: list
             names:
               - to-generic-search
               - generic-search-defaults
+              - generic-search-modifications
               - generic-to-elastic
               - elastic-modifications
               - ciim/search/request
-        response:
-          policy: list
-          names:
-            - ciim/search/response
-            - aggs-count-to-doc-count
+          response:
+            policy: list
+            names:
+              - ciim/search/response
+              - aggs-count-to-doc-count
 
 
   profile:
