--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -128,6 +128,26 @@ rosetta:
               - ciim/search/response
               - aggs-count-to-doc-count
 
+      - name: ciim/longCollections
+        paths:
+          -/rosetta/data/longCollections
+        profile: elasticsearch
+        type: advanced-cache-multi
+        transforms:
+          request:
+            policy: list
+            names:
+              - to-generic-search
+              - generic-search-defaults
+              - generic-search-modifications
+              - generic-to-elastic
+              - elastic-modifications
+              - ciim/search/request
+          response:
+            policy: list
+            names:
+              - ciim/search/response
+              - aggs-count-to-doc-count
 
   profile:
     profiles:
