Setup-Long-Filters: longCollections

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -130,7 +130,7 @@ rosetta:
 
       - name: ciim/longCollections
         paths:
-          -/rosetta/data/longCollections
+          - /rosetta/data/longCollections
         profile: elasticsearch
         type: advanced-cache-multi
         transforms:
