Setup-Long-Filters: longCollections, longSubjects, longArchives

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -232,6 +232,13 @@ rosetta:
               webReference: "web.identifier.value.lower"
               subjects: "subjects.subject.summary.title.keyword"
               title: "summary.title.keyword"
+          aggregation_configs:
+            - name: subjects
+              size: 200
+            - name: collection
+              size: 200
+            - name: heldBy
+              size: 200
           search_config:
             search_fields:
               - field: "name.value"
