--- a/kubernetes/rosetta-3/kustomization.yml
+++ b/kubernetes/rosetta-3/kustomization.yml
@@ -16,3 +16,6 @@ configMapGenerator:
       - ./config/inject_date_hist.json
       - ./config/es_query.json
       - ./config/component_search.json
+      - ./config/provider.json
+      - ./config/merge_advance_parameters.json
+      - ./config/inject_highlighting.json
