--- a/kubernetes/rosetta-3/kustomization.yml
+++ b/kubernetes/rosetta-3/kustomization.yml
@@ -19,3 +19,4 @@ configMapGenerator:
       - ./config/provider.json
       - ./config/merge_advance_parameters.json
       - ./config/inject_highlighting.json
+      - ./config/hierarchy_count_query.json
