Search results page: Return all filters, including (0)

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -109,6 +109,10 @@ rosetta:
 
   profile:
     profiles:
+      - name: default
+        profiles:
+          policy: all
+
       - name: elasticsearch
         providers:
           policy: list
