Search results page: Return all filters, including (0)

--- a/kubernetes/rosetta-3-TEST/kustomization.yml
+++ b/kubernetes/rosetta-3-TEST/kustomization.yml
@@ -17,3 +17,5 @@ configMapGenerator:
       - ./config/inject_highlighting.json
       - ./config/es_query.json
       - ./config/component_search.json
+      - ./config/provider.json
+      - ./config/merge_advance_parameters.json
