Search results page: Return all filters, including (0)

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -54,7 +54,7 @@ rosetta:
               - ciim/search/response
               - aggs-count-to-doc-count
 
-      - name: ciim/serachHighlight
+      - name: ciim/searchHighlight
         type: transform-only
         paths:
           - /ciim/search/highlight
