Search results page: Return all filters, including (0)

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -52,7 +52,7 @@ rosetta:
             policy: list
             names:
               - ciim/search/response
-
+              - aggs-count-to-doc-count
 
       - name: ciim/searchHighlight
         type: transform-only
