--- a/kubernetes/rosetta-3/config/application.yml
+++ b/kubernetes/rosetta-3/config/application.yml
@@ -233,7 +233,7 @@ rosetta:
               subjects: "subjects.subject.summary.title.keyword"
               title: "summary.title.keyword"
               longSubjects: "subjects.subject.summary.title.keyword"
-              longArchives: "repository.name.value.keyword"
+              longHeldBy: "repository.name.value.keyword"
               longCollections: "@hierarch.identifier.value"
           aggregation_configs:
             - name: longSubjects
