added ciim to new cluster

--- a/kubernetes/ciim-staging/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim-staging/properties/app_ctx_transient.properties
@@ -17,6 +17,20 @@ ciim.vault.db.driver=com.mysql.cj.jdbc.Driver
 
 ciim.vault.db.poolSize=5
 
+# CIIM VAULT DB PROPERTIES
+
+ciim.archive.db.url=jdbc:mysql://ciim-db-service.etna/ciim_archive_etna?autoReconnect=true&maxReconnects=3&initialTimeout=10
+
+ciim.archive.db.username=ciim
+
+ciim.archive.db.password=xxxx
+
+ciim.archive.db.dialect=org.hibernate.dialect.MySQL8Dialect
+
+ciim.archive.db.driver=com.mysql.cj.jdbc.Driver
+
+ciim.archive.db.poolSize=5
+
 # CIIM data directory
 ciim.data.dir=/ciim
 
