--- a/kubernetes/overlays/ciim/kustomization.yaml
+++ b/kubernetes/overlays/ciim/kustomization.yaml
@@ -3,5 +3,9 @@ bases:
   - ../../storage
   - ../../internal-es
   - ../../public-es
+  - ../../ciim-staging
 commonAnnotations:
   environment: dev
+patchesStrategicMerge:
+  - ciim-tagged.yml
+  - database-tagged.yml
