--- a/kubernetes/storage/ebs-storageclass.yml
+++ b/kubernetes/storage/ebs-storageclass.yml
@@ -13,7 +13,7 @@ parameters:
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: ebs-sc-scalable
+  name: ebs-sc
 provisioner: ebs.csi.aws.com
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true
