added ciim to new cluster

--- a/kubernetes/overlays/ciim/kustomization.yaml
+++ b/kubernetes/overlays/ciim/kustomization.yaml
@@ -4,6 +4,7 @@ bases:
   - ../../internal-es
   - ../../public-es
   - ../../ciim-staging
+  - ../../ciim-ingress
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
