--- a/kubernetes/rosetta-3/config/application.yml
+++ b/kubernetes/rosetta-3/config/application.yml
@@ -235,6 +235,7 @@ rosetta:
               longSubjects: "subjects.subject.summary.title.keyword"
               longHeldBy: "repository.name.value.keyword"
               longCollections: "@hierarch.identifier.value"
+              datatype: "@datatype.base"
           aggregation_configs:
             - name: longSubjects
               size: 10000
