--- a/kubernetes/rosetta-3/kustomization.yml
+++ b/kubernetes/rosetta-3/kustomization.yml
@@ -20,3 +20,4 @@ configMapGenerator:
       - ./config/merge_advance_parameters.json
       - ./config/inject_highlighting.json
       - ./config/hierarchy_count_query.json
+      - ./config/heldby_count_query.json
