Added rosetta 3 to ciim cluster

--- a/kubernetes/overlays/ciim/kustomization.yaml
+++ b/kubernetes/overlays/ciim/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
   - ../../public-es
   - ../../ciim-staging
   - ../../ciim-ingress
+  - ../../rosetta-3-ciim
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
