--- a/kubernetes/ciim-ingress/ingress.yml
+++ b/kubernetes/ciim-ingress/ingress.yml
@@ -16,3 +16,10 @@ spec:
                 name: ciim-service
                 port:
                   name: api-port
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-3-service
+                port:
+                  name: rosetta-port
