--- a/kubernetes/overlays/ciim/kustomization.yaml
+++ b/kubernetes/overlays/ciim/kustomization.yaml
@@ -6,6 +6,7 @@ bases:
   - ../../ciim-staging
   - ../../ciim-ingress
   - ../../rosetta-3-ciim
+  - ../../acme
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
